--- a/front/public/index.html
+++ b/front/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     
-    <link rel="shortcut icon" href="./logo192.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Lato&display=swap" rel="stylesheet">
